examples/test/testpolicy4556.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4556
  namespace: namespace43
spec:
  podSelector:
    matchLabels:
      key5: value10
      key8: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value27
          key5: value35
      podSelector:
        matchLabels:
          key21: value9
          key31: value27
          key14: value10
